--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
     "recreate-tables": "npm run drop-tables && npm run create-tables",
     "setup-db": "npm run recreate-tables && npm run load-seed-data"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/alexjonspencer1/to-do-list.git"
+  },
   "author": "Alex Spencer @alexjonspencer1",
   "license": "ISC",
   "keywords": [],
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
+    "jsdom": "^15.1.1",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
     "superagent": "^5.1.0"
